<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.ui.register.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_in_signup"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="80dp"/>

            <EditText
                android:id="@+id/enter_email_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_email" />

            <EditText
                android:id="@+id/reenter_email_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_reenter_email" />

            <EditText
                android:id="@+id/enter_password_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_password" />

            <EditText
                android:id="@+id/reenter_password_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:hint="@string/please_reenter_password" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <Button
        android:id="@+id/registerSuccessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register"/>


</LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>